Add global font size and line height styles
Added custom global font size and line height styles.

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -1,8 +1,13 @@
+---
+---
+
+/* Custom global font size override */
 body {
   font-size: 18px;
   line-height: 1.65;
 }
 
-h1 { font-size: 2.2rem; }
-h2 { font-size: 1.8rem; }
-h3 { font-size: 1.4rem; }
+.main-content, .page-content, .post-content {
+  max-width: 720px;
+  margin: 0 auto;
+}
